Task/1495 java 21. (#1497)
Fixes #1495. 

- Upgrade to Gradle 9.2, adjust mostly docs, some other tasks.
- Set target to Java 25... discovered our systemstubs library can't mock
SystemExit even at newest version
  - It relied on the SecurityManager which is completely removed now.
- Set target to Java 21, at least one integration test passed.

## how you tested the change

Integration tests that already exist