@@ -9,14 +9,18 @@ dependencies {
     implementation project(":opendcs")
     implementation project(":testing:fixtures")
     testImplementation enforcedPlatform(libs.junit.bom)
-    testImplementation(libs.ch.qos.logback)
     testImplementation(libs.bundles.junit)
+    testImplementation(libs.bundles.junit.platform)
+    testImplementation(libs.ch.qos.logback)
     testImplementation(libs.commons.io)
     testImplementation(libs.apache.derby)
     testImplementation(libs.io.github.hakky54)
     testImplementation(libs.webcompere.system.stubs.jupiter)
 }
 
+test {
+    jvmArgs += "-Djava.security.manager=allow"
+}
 
 jacocoTestReport {
     dependsOn test
